Prevent options overflow at larger widths

--- a/src/components/compress/style.scss
+++ b/src/components/compress/style.scss
@@ -32,7 +32,7 @@
   }
 
   @media (min-width: 860px) {
-    max-height: none;
+    max-height: 100%;
   }
 }
 
